fixed spacing issue in charts

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,7 @@ div.full {
 /* end recently added */
 .chart .count {
 	font-size:12px;
+	height:0px;
 }
 .c3-axis-x path,
 .c3-axis-x line,
